<resources>
    <string name="app_name">OPCV</string>
    <string name="Diccionary">Diccionario</string>
    <string name="Map">Huertas</string>
    <string name="Gardens">Huerta</string>
    <string name="User">Perfil</string>
    <string name="CreateProfile">Crea tu cuenta</string>
    <string name="question1">¿Ya tienes una cuenta?</string>
    <string name="question2">Entrar como invitado</string>
    <string name="login_text1">Inicia sesión</string>
    <string name="login_text2">Ingresa</string>
    <string name="GardenAvTittle">Huertas Activas Disponibles</string>
    <string name="gardenName">Nombre Huerta</string>
    <string name="privateL">Privado</string>
    <string name="publicL">Público</string>
    <string name="add">Agregar</string>
    <string name="gardenInfo">Información de la Huerta</string>
    <string name="questionGardenName">¿Cómo se llama su huerta?</string>
    <string name="createGarden">Crear Huerta</string>
    <string name="gardenType">Tipo de huerta</string>
    <string name="publicGarden">¿Desea hacer la huerta publica?</string>
    <string name="Comunity">Comunidad</string>
    <string name="Caption">Descripción</string>
    <string name="Team">Administrar integrantes de la huerta</string>
    <string name="deleteGarden">Eliminar huerta</string>
    <string name="AddForm">Agregar Formulario</string>
    <string name="Report">Generar Reporte</string>
    <string name="questionReport">¿Desea generar reporte de la huerta?</string>
    <string name="cancel">Cancelar</string>
    <string name="nameUsr">Nombre</string>
    <string name="nombre">Nombre:</string>
    <string name="cellphon">Telefono:</string>
    <string name="direcci_n">Dirección:</string>
    <string name="email">Correo electronico:</string>
    <string name="comunity2">Apellido:</string>
    <string name="editar">Editar</string>
    <string name="otras_opciones">Otras opciones</string>
    <string name="integrantes_de_la_huerta">Integrantes de la huerta</string>
    <string name="boton_para_regresar">Boton para regresar</string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="formularios">Formularios</string>
    <string name="title_activity_maps_fragment">MapsActivityFragment</string>
    <string name="signout">Cerrar sesión</string>
    <string name="delete">Eliminar cuenta</string>
    <string name="acceptChanges">Aceptar cambios</string>
    <string name="deleteGardenConfirmation">¿Esta seguro que desea eliminar la huerta?</string>
    <string name="CPS">Control de Procesos de Siembra</string>
    <string name="RCC">Registro y Control de Compostaje</string>
    <string name="RRH">Recepción y Requisición de Herramientas</string>
    <string name="CIH">Control de Inventarios de Herramientas</string>
    <string name="RHC">Registro Histórico Caja</string>
    <string name="RAC">Registro y Actualización de Compostaje</string>
    <string name="descripci_n_materia_prima">Descripción Materia Prima</string>
    <string name="nombre_del_tem">Nombre del ítem</string>
    <string name="tem">Ítem</string>
    <string name="total">Total</string>
    <string name="cantidad">Cantidad</string>
    <string name="agregar_formulario">Agregar Formulario</string>
    <string name="estado">Estado</string>
    <string name="salida">Salida</string>
    <string name="recepci_n">Recepción</string>
    <string name="concepto">Concepto</string>
    <string name="unidades">Unidades</string>
    <string name="descripci_n">Descripción</string>
    <string name="recepci_n_y_requesici_n_de_materia_prima">Recepción y Requisición de Materia Prima</string>
    <string name="requestJoin">Solicitar Unirse</string>
    <string name="visitRequest">Solicitar visita</string>
    <string name="collaboratorGardens">Colaboración</string>
    <string name="seeOtherGardens">Ver otras huertas</string>
    <string name="participants1">Participantes</string>
    <string name="participants2"> Participantes</string>
    <string name="MyCollaborations">Huertas en las que soy colaborador</string>
    <string name="formsRegister">Ver Registros de formularios</string>
    <string name="generalReport">Reporte general</string>
    <string name="maleGender">Hombre</string>
    <string name="femaleGender">Mujer</string>
    <string name="otherGender">Otro</string>
    <string-array name="gendersElements">
        <item>@string/maleGender</item>
        <item>@string/femaleGender</item>
        <item>@string/otherGender</item>
    </string-array>
    <string-array name="list_forms">
        <item>Registro y Actualización de Compostaje</item>
        <item>Registro de evento</item>
        <item>Control de inventario de Materia Prima</item>
        <item>Solicitud de compra de materia prima y herramientas</item>
        <item>Recepción y Requisición de Materia Prima</item>
        <item>Control de Procesos de Siembra</item>
        <item>Registro y Control de Compostaje</item>
        <item>Recepción y Requisición de Herramientas</item>
        <item>Control de Inventarios de Herramientas</item>
        <item>Registro Histórico Caja</item>
    </string-array>
    <string name="title_activity_other_garden">otherGardenActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="solicitudes">Solicitudes</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="n_mero_de_tel_fono">Número de teléfono</string>
    <string name="tipo_identificaci_n">Tipo identificación</string>
    <string name="registro_de_evento">Registro de evento</string>
    <string name="fecha">Fecha</string>
    <string name="asistencia_de_personas">Asistencia de personas por grupo</string>
    <string name="personas_que_asistieron">Personas que asistieron</string>
    <string name="nombre_del_evento">Nombre del evento</string>
    <string name="poblaci_n_afro">Población afro</string>
    <string name="poblaci_n_ind_gena">Población Indígena</string>
    <string name="poblaci_n_lgbti">Población LGBTI+</string>
    <string name="poblaci_n_rom">Población Rom</string>
    <string name="poblaci_n_v_ctima_del_conflicto_armado">Población Víctima del Conflicto Armado</string>
    <string name="poblaci_n_en_condici_n_de_discapacidad">Población en Condición de Discapacidad</string>
    <string name="poblaci_n_desmovilizada">Población Desmovilizada</string>
    <string name="poblaci_n_mestiza">Población Mestiza</string>
    <string name="extranjero_a">Extranjero(a)</string>
    <string name="campesino_a">Campesino(a)</string>
    <string name="asistencia_seg_n_el_g_nero">Asistencia según el género</string>
    <string name="asistencia_seg_n_el_rango_de_edad">Asistencia según el rango de edad</string>
    <string name="infancia_6_11_a_os">Infancia (6-11 años)</string>
    <string name="adolescencia_12_18_a_os">Adolescencia (12 -18 años)</string>
    <string name="juventud_19_26_a_os">Juventud (19 -26 años)</string>
    <string name="persona_mayor_60_a_os_o_m_s">Persona mayor (60 años o más)</string>
    <string name="adultez_27_59_a_os">Adultez (27 -59 años)</string>
    <string name="hombres">Hombres</string>
    <string name="mujeres">Mujeres</string>
    <string name="no_especificado">No especificado</string>
    <string name="primera_infancia_0_5_a_os">Primera infancia (0-5 años)</string>
    <string name="informaci_n_de_huerta">Información de la huerta</string>
    <string name="description">Description</string>
    <string name="formularioss">Formularios</string>
    <string name="boton_para_a_adir_personas">Boton para añadir personas</string>
    <string name="boton_de_editar">Boton de editar</string>
    <string name="contrase_a">Contraseña</string>
    <string name="boton_de_descargar">Boton de descargar</string>
    <string name="bonos">Bonos</string>
    <string name="DisplayPDF">A continuación, podrás visualizar la guía que seleccionaste o podrás descargarla en tu dispositivo.</string>
    <string name="TextCabbage">El repollo es una hortaliza muy utilizada a nivel mundial para la elaboración de platillos como sopas, ensaladas, jugos y fermentos. A continuación estan los problemas más comúnes:</string>
    <string name="CabbagePlagues">Plagas del repollo: </string>
    <string name="CabbageDiseases">Enfermedades del repollo: </string>
    <string name="CabbageFirstPlagueName">Orugas en el repollo</string>
    <string name="CabbageFirstPlagueDescription">Son una de las principales plagas de la cloriflor. Sobretodo atacan en su estado larvario, es decir, antes de convertirse en mariposas. Los daños más comunes son mordeduras en las hojas. Su forma adulta se caracteriza, principalmente por ser blanca y presentar dos puntos negros en las alas.</string>
    <string name="CabbageFirstPlagueSolution">Solución: El control de estos insectos se basa en el empleo de feromonas o focos de luz. También, es importante detectar cuanto antes las larvitas pequeñas para poder actuar más rápidamente.</string>
    <string name="CabbageSecondPlagueName">Mosca de la col</string>
    <string name="CabbageSecondPlagueDescription">La mosca de la col causa daños importantes en primavera, principalmente en las plantas más jóvenes. Las larvas de estos insectos penetran por las raíces de la planta de repollo pudiendo acabar con él.</string>
    <string name="CabbageSecondPlagueSolution">Solución: Modificar fecha de siembra y trasplante o utilizar variedades tempranas.</string>
    <string name="CabbageThirdPlagueName">Chinche de las crucíferas</string>
    <string name="CabbageThirdPlagueDescription">Producen picaduras en el limbo de las hojas superiores, succionando líquidos y provocando su marchitez.</string>
    <string name="CabbageThirdPlagueSolution">Solución: Destruir la maleza de los alrededores ya que les sirve de refugio.</string>
    <string name="CabbageFirstDiseaseName">Repollo podrido: podredumbre seca</string>
    <string name="CabbageFirstDiseaseDescription">También se conoce como «cáncer de las coles» y «pie negro». El causante de esta enfermedad es un hongo y suele atacar también a otras crucíferas. Los principales síntomas son la aparición de unas manchas redondeadas de color pardo en el tallo. Al principio éstas manchas se encuentran aisladas pero a medida que avanza la enfermedad se van uniendo y destruyendo los tejidos. Las hojas también pueden verse afectadas por esta enfermedad apareciendo en ellas unas manchas grisáceas que se oscurecen con el tiempo.</string>
    <string name="CabbageFirstDiseaseSolution">Solución: Se puede disminuir la severidad del ataque al incrementar el pH del suelo (>7.1), mejorar su drenaje, realizar rotación de cultivos y controlar malezas de la misma familia (crucíferas). Es importante notar que algunas plantas pueden mostrar síntomas leves, por lo que es de suma importancia monitorear las raíces frecuentemente.</string>
    <string name="CabbageSecondDiseaseName">Podredumbre negra de la col</string>
    <string name="CabbageSecondDiseaseDescription">Causada por unas bacterias conocidas como Xanthomonas campestris. Éstas bacterias afectan tanto a las plantas jóvenes como a las adultas. Si las condiciones de humedad y temperatura son las favorables pueden causar graves daños.</string>
    <string name="CabbageSecondDiseaseSolution">Solución: Usar semilla certificada, cultivar en suelos libres de estas bacterias, mantener el campo libre de crucíferas silvestres, destruir rápidamente los focos infectados.</string>
    <string name="CabbageReference">https://www.agrohuerto.com/plagas-y-enfermedades-del-repollo/</string>
    <string name="repollo">Repollo</string>
    <string name="moreInfo">Para más información consulte:</string>
</resources>