<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".view.ludification.LettuceDiseasesActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/returnArrowButtonToHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:clickable="true"
            android:contentDescription="@string/boton_para_regresar"
            android:tint="@color/white"
            app:backgroundTint="#91BF63"
            app:srcCompat="@drawable/dr_return_arrow" />



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_50sdp">

            <LinearLayout
                android:id="@+id/lettuceLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manroperegular"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:gravity="center"
                    android:text="@string/repollo"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_35sdp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/im_repollo"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"/>

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:fontFamily="@font/manroperegular"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:gravity="center"
                    android:text="@string/TextCabbage"
                    android:textColor="#050505"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="@font/manropesemibold"
                    android:gravity=""
                    android:text="@string/CabbagePlagues"
                    android:textColor="#050505"
                    android:textSize="@dimen/_15sdp"/>

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/manropemedium"
                    android:gravity=""
                    android:text="@string/CabbageFirstPlagueName"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:textColor="@color/darkbluetur"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manroperegular"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:text="@string/CabbageFirstPlagueDescription"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp"/>


                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/manroperegular"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:text="@string/CabbageFirstPlagueSolution"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/manropemedium"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:text="@string/CabbageSecondPlagueName"
                    android:textColor="@color/darkbluetur"
                    android:textSize="@dimen/_15sdp"/>

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manroperegular"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:text="@string/CabbageSecondPlagueDescription"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp"/>

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/manroperegular"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:text="@string/CabbageSecondPlagueSolution"
                    android:textColor="#272525"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/manropemedium"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:text="@string/CabbageThirdPlagueName"
                    android:textColor="@color/darkbluetur"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manroperegular"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:text="@string/CabbageThirdPlagueDescription"
                    android:textColor="#050505"
                    android:textSize="@dimen/_15sdp"/>

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/manroperegular"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:text="@string/CabbageThirdPlagueSolution"
                    android:textColor="#050505"
                    android:textSize="@dimen/_15sdp" />


                <TextView
                    android:id="@+id/textVie22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/manropesemibold"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/CabbageDiseases"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/manropemedium"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:text="@string/CabbageFirstDiseaseName"
                    android:textColor="@color/darkbluetur"
                    android:textSize="@dimen/_15sdp"/>

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manroperegular"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:text="@string/CabbageFirstDiseaseDescription"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp"/>

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/manroperegular"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:text="@string/CabbageFirstDiseaseSolution"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/manropemedium"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:text="@string/CabbageSecondDiseaseName"
                    android:textColor="@color/darkbluetur"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manroperegular"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:text="@string/CabbageSecondDiseaseDescription"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp"/>

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/manroperegular"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:text="@string/CabbageSecondDiseaseSolution"
                    android:textColor="@color/black"
                    android:layout_marginBottom="@dimen/_40sdp"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:id="@+id/textVie32"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/manropesemibold"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:text="@string/moreInfo"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:id="@+id/textView34"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/manroperegular"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:text="@string/CabbageReference"
                    android:textSize="@dimen/_15sdp" />


            </LinearLayout>
        </ScrollView>
    </FrameLayout>
    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_80sdp"
        android:background="@drawable/dr_shadow_top"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ludification"
            android:layout_width="@dimen/_98sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/_2sdp"
            android:background="@color/white"
            android:drawableTop="@drawable/im_dictionary"
            android:fontFamily="@font/manropemedium"
            android:padding="@dimen/_5sdp"
            android:layout_weight="1"
            android:textSize="@dimen/_13sdp"
            android:ellipsize="end"
            android:maxLines="1"
            android:stateListAnimator="@null"
            android:text="@string/Diccionary"
            android:textAllCaps="false"
            android:textColor="@color/grayLetters" />

        <Button
            android:id="@+id/rewards"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:fontFamily="@font/manropemedium"
            android:layout_marginBottom="@dimen/_2sdp"
            android:background="@color/white"
            android:drawableTop="@drawable/im_reward_icon"
            android:padding="@dimen/_5sdp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="@dimen/_13sdp"
            android:stateListAnimator="@null"
            android:text="@string/bonos"
            android:textAllCaps="false"
            android:textColor="@color/grayLetters" />

        <Button
            android:id="@+id/myGardens"
            android:layout_width="@dimen/_107sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_marginStart="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:background="@color/white"
            android:drawableTop="@drawable/im_plant_icon"
            android:fontFamily="@font/manropemedium"
            android:padding="@dimen/_5sdp"
            android:layout_weight="1"
            android:textSize="@dimen/_13sdp"
            android:stateListAnimator="@null"
            android:text="@string/Gardens"
            android:textAllCaps="false"
            android:textColor="@color/grayLetters" />

        <Button
            android:id="@+id/profile"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:fontFamily="@font/manropemedium"
            android:background="@color/white"
            android:drawableTop="@drawable/im_user_icon"
            android:padding="@dimen/_5sdp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="@dimen/_13sdp"
            android:stateListAnimator="@null"
            android:text="@string/User"
            android:textAllCaps="false"
            android:textColor="@color/grayLetters" />


    </LinearLayout>

</LinearLayout>