<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".view.ludification.DisplayPdfActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="@dimen/_230sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginStart="@dimen/_1sdp"
            android:fontFamily="@font/manropemedium"
            android:gravity="center"
            android:text="@string/DisplayPDF"
            android:textColor="#050505"
            android:textSize="@dimen/_17sdp" />

        <ImageButton
            android:id="@+id/download"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:background="@drawable/im_download_icon"
            android:contentDescription="@string/boton_de_descargar"
            android:scaleType="centerInside" />

    </LinearLayout>

    <com.github.barteksc.pdfviewer.PDFView
        android:id="@+id/pdfView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_80sdp"
        android:background="@drawable/dr_shadow_top"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ludification"
            android:layout_width="@dimen/_98sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/_2sdp"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawableTop="@drawable/im_dictionary"
            android:ellipsize="end"
            android:fontFamily="@font/manropemedium"
            android:maxLines="1"
            android:padding="@dimen/_5sdp"
            android:stateListAnimator="@null"
            android:text="@string/Diccionary"
            android:textAllCaps="false"
            android:textColor="@color/grayLetters"
            android:textSize="@dimen/_13sdp" />

        <Button
            android:id="@+id/rewards"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:fontFamily="@font/manropemedium"
            android:layout_marginBottom="@dimen/_2sdp"
            android:background="@color/white"
            android:drawableTop="@drawable/im_reward_icon"
            android:padding="@dimen/_5sdp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="@dimen/_13sdp"
            android:stateListAnimator="@null"
            android:text="@string/bonos"
            android:textAllCaps="false"
            android:textColor="@color/grayLetters" />

        <Button
            android:id="@+id/myGardens"
            android:layout_width="@dimen/_107sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawableTop="@drawable/im_plant_icon"
            android:ellipsize="end"
            android:fontFamily="@font/manropemedium"
            android:maxLines="1"
            android:padding="@dimen/_5sdp"
            android:stateListAnimator="@null"
            android:text="@string/Gardens"
            android:textAllCaps="false"
            android:textColor="@color/grayLetters"
            android:textSize="@dimen/_13sdp" />

        <Button
            android:id="@+id/profile"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawableTop="@drawable/im_user_icon"
            android:ellipsize="end"
            android:fontFamily="@font/manropemedium"
            android:maxLines="1"
            android:padding="@dimen/_5sdp"
            android:stateListAnimator="@null"
            android:text="@string/User"
            android:textAllCaps="false"
            android:textColor="@color/grayLetters"
            android:textSize="@dimen/_13sdp" />


    </LinearLayout>
</LinearLayout>